--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ background: '/img/bg-about.jpg'
 
 
 <h2 align="center"><a id="About_Younos_Nazarian_0"></a>About Younos Nazarian</h2>
-<div style="text-align:center"><img class="img-fluid" src="/JJ/img/About.jpg" alt="About Younos Nazarian"/></div>
+<div style="text-align:center"><img class="img-fluid" src="/img/About.jpg" alt="About Younos Nazarian"/></div>
 
 
 
