--- a/img/test.html
+++ b/img/test.html
@@ -8,3 +8,9 @@
   <textarea>Next, use our Get Started docs to setup Tiny!</textarea>
 </body>
 </html>
+tinymce.init({
+  selector: "textarea",  // change this value according to your HTML
+  plugins: "code",
+  toolbar: "code",
+  menubar: "tools"
+});
