--- a/img/test.html
+++ b/img/test.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-  <script>tinymce.init({ selector:'textarea' });</script>
+  <script src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
+  <script>
+  tinymce.init({
+    selector: '#mytextarea'
+  });
+  </script>
 </head>
+
 <body>
-  <textarea>Next, use our Get Started docs to setup Tiny!</textarea>
+<h1>TinyMCE Quick Start Guide</h1>
+  <form method="post">
+    <textarea id="mytextarea" name="mytextarea">Hello, World!</textarea>
+  </form>
 </body>
 </html>
-tinymce.init({
-  selector: "textarea",  // change this value according to your HTML
-  plugins: "code",
-  toolbar: "code",
-  menubar: "tools"
-});
+
