--- a/img/test.html
+++ b/img/test.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-tinymce.init({
-  selector: 'textarea',  // change this value according to your HTML
-  menu: {
-    view: {title: 'Happy', items: 'code'}
-  },
-  plugins: 'code'  // required by the code menu item
-});
 <head>
-  <script src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
-  <script>
+  <script type="text/javascript" src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
+  <script type="text/javascript">
   tinymce.init({
-    selector: '#mytextarea'
+    selector: '#myTextarea',
+    skin: 'dark',
+    width: 600,
+    height: 300,
+    plugins: [
+      'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
+      'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
+      'save table directionality emoticons template paste'
+    ],
+    content_css: 'css/content.css',
+    toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image | print preview media fullpage | forecolor backcolor emoticons'
   });
   </script>
 </head>
 
 <body>
-<h1>TinyMCE Quick Start Guide</h1>
-  <form method="post">
-    <textarea id="mytextarea" name="mytextarea">Hello, World!</textarea>
-  </form>
+  <textarea id="myTextarea"></textarea>
 </body>
 </html>
 
