--- a/img/test.html
+++ b/img/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>   
   <script type="text/javascript" src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
   <script type="text/javascript">
   tinymce.init({
@@ -8,6 +8,9 @@
     skin: 'dark',
     width: 600,
     height: 300,
+    menu: {
+    view: {title: 'Happy', items: 'code'}
+    },
     plugins: [
       'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
