--- a/img/test.html
+++ b/img/test.html
@@ -3,13 +3,13 @@
 <head>
   <script src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
   <script>
-  tinymce.init({
-    selector: '#mytextarea'
-    menu: {
+tinymce.init({
+  selector: 'textarea',  // change this value according to your HTML
+  menu: {
     view: {title: 'Happy', items: 'code'}
-    },
-    plugins: 'code'  // required by the code menu item
-  });
+  },
+  plugins: 'code'  // required by the code menu item
+});
   </script>
 </head>
 
