--- a/img/mediator.html
+++ b/img/mediator.html
@@ -8,7 +8,8 @@ tinymce.init({
   menu: {
     view: {title: 'Happy', items: 'code'}
   },
-  plugins: 'code image link lists advlist media'  // required by the code menu item
+  plugins: 'code image link lists advlist media',  // required by the code menu item
+  toolbar: 'numlist bullist'
 });
   </script>
 </head>
