--- a/img/mediator.html
+++ b/img/mediator.html
@@ -9,7 +9,7 @@ tinymce.init({
     view: {title: 'Happy', items: 'code'}
   },
   plugins: 'code image link lists advlist media',  // required by the code menu item
-  toolbar: 'numlist bullist'
+  toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect'
 });
   </script>
 </head>
