--- a/img/mediator.html
+++ b/img/mediator.html
@@ -15,9 +15,9 @@ tinymce.init({
 </head>
 
 <body>
-<h1>TinyMCE Quick Start Guide</h1>
+<h1>Write the article!</h1>
   <form method="post">
-    <textarea id="mytextarea" name="mytextarea">Hello, World!</textarea>
+    <textarea id="mytextarea" name="mytextarea">Hi Younos!</textarea>
   </form>
 </body>
 </html>
