--- a/img/mediator.html
+++ b/img/mediator.html
@@ -8,7 +8,7 @@ tinymce.init({
   menu: {
     view: {title: 'Happy', items: 'code'}
   },
-  plugins: 'code image link lists advlist media',  // required by the code menu item
+  plugins: 'code image link lists advlist media save',  // required by the code menu item
   toolbar: 'undo redo | save | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect'
 });
   </script>
