--- a/img/mediator.html
+++ b/img/mediator.html
@@ -5,9 +5,9 @@
   <script>
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  plugins: 'code image link lists advlist fullscreen media save anchor unlink',  // required by the code menu item
-  toolbar1: 'undo redo fullscreen | save | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
-  toolbar2: 'link unlink anchor image media code'
+  plugins: 'code image link lists advlist fullscreen media codesample anchor unlink',  // required by the code menu item
+  toolbar1: 'undo redo fullscreen | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
+  toolbar2: 'link unlink anchor image media code codesample'
 });
   </script>
 </head>
