--- a/img/mediator.html
+++ b/img/mediator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src='https://cdn.tiny.cloud/1/qyq27vh3wt8luz8gbqhrcj7jtsb0pq1ao2y9dyh73w4f57xh/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
+  <script src='https://younosnazarian.github.io/tinymcekryptomesh/js/tinymce/jquery.tinymce.min.js' referrerpolicy="origin"></script>
   <script>
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
