--- a/img/mediator.html
+++ b/img/mediator.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src='https://younosnazarian.github.io/tinymcekryptomesh/js/tinymce/jquery.tinymce.min.js' referrerpolicy="origin"></script>
+  <script src='https://younosnazarian.github.io/tinymcekryptomesh/js/tinymce/tinymce.min.js' referrerpolicy="origin"></script>
   <script>
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  plugins: 'advcode preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
+  plugins: 'advcode localautosave preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
   toolbar1: 'undo redo fullscreen | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
-  toolbar2: 'link unlink anchor image media code codesample | wordcount preview'
+  toolbar2: 'link unlink anchor image media code codesample | wordcount preview localautosave'
 });
   </script>
 </head>
