--- a/img/mediator.html
+++ b/img/mediator.html
@@ -3,28 +3,11 @@
 <head>
   <script src='https://cdn.tiny.cloud/1/qyq27vh3wt8luz8gbqhrcj7jtsb0pq1ao2y9dyh73w4f57xh/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
   <script>
-tinyMCE.PluginManager.add('stylebuttons', function(editor, url) {
-  ['pre', 'p', 'code', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6'].forEach(function(name){
-   editor.addButton("style-" + name, {
-       tooltip: "Toggle " + name,
-         text: name.toUpperCase(),
-         onClick: function() { editor.execCommand('mceToggleFormat', false, name); },
-         onPostRender: function() {
-             var self = this, setup = function() {
-                 editor.formatter.formatChanged(name, function(state) {
-                     self.active(state);
-                 });
-             };
-             editor.formatter ? setup() : editor.on('init', setup);
-         }
-     })
-  });
-});
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  plugins: 'stylebuttons advcode autosave preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
+  plugins: 'advcode autosave preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
   toolbar1: 'undo redo fullscreen | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
-  toolbar2: 'link unlink anchor image media code codesample | wordcount preview restoredraft | style-p style-h1 style-h2 style-h3 style-pre style-code'
+  toolbar2: 'link unlink anchor image media code codesample | wordcount preview restoredraft | formatselect'
 });
   </script>
 </head>
