--- a/labs/2019-01-26-Starting with Juniper SRX Firewall:Security Gateway FromScratch (Episode 1) .html
+++ b/labs/2019-01-26-Starting with Juniper SRX Firewall:Security Gateway FromScratch (Episode 1) .html
@@ -1,3 +1,11 @@
+---
+layout: post
+title:  "Starting with Juniper SRX Firewall/Security Gateway FromScratch (Part 1):"
+subtitle: "Basic Configuration"
+date:   2019-01-26 11:10:13 -0400
+background: '/img/posts/2019-01-26/Cover.jpg'
+---
+
 <h3><a id="Level_BeginnerIntermediate_0"></a>Level: Beginner-Intermediate</h3>
 <h2><a id="Introduction_2"></a>Introduction</h2>
 <h3><a id="Who_is_this_article_for_4"></a>Who is this article for?</h3>
