--- a/img/mediator.html
+++ b/img/mediator.html
@@ -5,8 +5,8 @@
   <script>
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  plugins: 'print advcode autosave preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
-  toolbar1: 'print undo redo fullscreen | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
+  plugins: 'advcode autosave preview image link lists advlist fullscreen media codesample anchor unlink wordcount',  // required by the code menu item
+  toolbar1: 'undo redo fullscreen | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | table | fontsizeselect',
   toolbar2: 'link unlink anchor image media code codesample | wordcount preview restoredraft | formatselect'
 });
   </script>
