--- a/_posts/2019-01-26-Starting with Juniper SRX Firewall:Security Gateway FromScratch (Episode 1) .html
+++ b/_posts/2019-01-26-Starting with Juniper SRX Firewall:Security Gateway FromScratch (Episode 1) .html
@@ -261,7 +261,7 @@ root@SRX# set file Audit structured
 
 [edit system syslog]
 root@SRX# set file Processes daemon info
-root@SRX# set file Audit structured
+root@SRX# set file Processes structured-data
 
 [edit system syslog]
 root@SRX# top 
