--- a/img/mediator.html
+++ b/img/mediator.html
@@ -13,9 +13,9 @@ tinymce.init({
 </head>
 
 <body>
-<h1>Write the article!</h1>
+<h1>Whiteboard</h1>
   <form method="post">
-    <textarea id="mytextarea" name="mytextarea">Hi Younos!</textarea>
+    <textarea id="mytextarea" name="mytextarea">Hello!</textarea>
   </form>
 </body>
 </html>
